--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "main": "index.js",
   "scripts": {
     "dev": " nodemon src/index.js"
-    
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3"
   }
 }
