add user and video model

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://ayush:ayush@cluster0.3bqoo.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=ayush //you can put any secret key here
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN=AYUSH //you can put any secret key here
+REFRESH_TOKEN_EXPIRY=7d 
