--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=ayush //you can put any secret key here
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN=AYUSH //you can put any secret key here
 REFRESH_TOKEN_EXPIRY=7d 
+
+CLOUDINARY_CLOUD_NAME=dfa3bdz9m
+CLOUDINARY_API_KEY=473973665416896
+CLOUDINARY_API_SECRET= RNGJzx_SJuIf_tfczVfu3nRUObI
